# mandrill-mailchimp-python

./: index.html  mailchimp.py  mandrill_api.py  pyproject.toml
